# mavros_ws_drone

./: .gitignore  READ.me
src/conflict_checker/: CMakeLists.txt  package.xml
src/conflict_checker/src/: path_checker.py
src/offb_node/: CMakeLists.txt  package.xml
src/offb_node/launch/: offb_launch.launch  tutorial_launch.launch
src/offb_node/src/: offb_node.cpp  testing_circle_path.py  velocity_mode.cpp
src/uav_follower/: CMakeLists.txt  package.xml
src/uav_follower/launch/: uav_follower.launch
src/uav_follower/src/: uav_follower_node.py
